[package]
name = "wasm-debug"
version = "0.2.0"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/wasm-debug"
description = "Generic Wasm DWARF transformation crate"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm", "development-tools::debugging"]
keywords = ["webassembly", "wasm", "debuginfo", "dwarf", "debugger"]
readme = "README.md"
edition = "2018"

[dependencies]
cranelift-entity = "0.59.0"
gimli = "0.20.0"
wasmparser = "0.51.4"
faerie = "0.14.0"
target-lexicon = { version = "0.10.0", default-features = false }
anyhow = "1.0"
thiserror = "1.0.4"
more-asserts = "0.2.1"

[badges]
maintenance = { status = "passively-maintained" }
